src/adapters/tui/widgets/snapshots/omakure__adapters__tui__widgets__schema__tests__snapshot_schema_error.snap
---
source: src/adapters/tui/widgets/schema.rs
expression: terminal.backend()
---
"┌Schema────────────────────────────────────────────────────┐"
"│Failed to load schema.                                    │"
"│Invalid JSON at line 5                                    │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"└──────────────────────────────────────────────────────────┘"
