src/adapters/tui/widgets/snapshots/omakure__adapters__tui__widgets__schema__tests__snapshot_schema_no_fields.snap
---
source: src/adapters/tui/widgets/schema.rs
expression: terminal.backend()
---
"┌Schema────────────────────────────────────────────────────┐"
"│Name: Simple                                              │"
"│                                                          │"
"│(no fields)                                               │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"└──────────────────────────────────────────────────────────┘"
