src/adapters/tui/widgets/snapshots/omakure__adapters__tui__widgets__schema__tests__snapshot_schema_no_preview.snap
---
source: src/adapters/tui/widgets/schema.rs
expression: terminal.backend()
---
"┌Schema────────────────────────────────────────────────────┐"
"│Select a script to preview its schema.                    │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"└──────────────────────────────────────────────────────────┘"
