src/adapters/tui/widgets/snapshots/omakure__adapters__tui__widgets__schema__tests__snapshot_schema_with_fields.snap
---
source: src/adapters/tui/widgets/schema.rs
expression: terminal.backend()
---
"┌Schema────────────────────────────────────────────────────┐"
"│Name: Deploy App                                          │"
"│Description: Deploy to production                         │"
"│Tags: ops, deploy                                         │"
"│                                                          │"
"│Fields: 2                                                 │"
"│- target [string, required]                               │"
"│    prompt: Target environment                            │"
"│- dry_run [boolean, optional]                             │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"└──────────────────────────────────────────────────────────┘"
